2007-06-04 Added labeldistance arg to Axes.pie to control the raidal
           distance of the wedge labels - JDH

2007-06-03 Turned mathtext in SVG into single <text> with multiple <tspan>
           objects (easier to edit in inkscape). - NN

===============================================================
2007-06-02 Released 0.90.1 at revision 3352

2007-06-02 Display only meaningful labels when calling legend()
           without args. - NN

2007-06-02 Have errorbar follow the color cycle even if line is not plotted.
           Suppress plotting of errorbar caps for capsize=0. - NN

2007-06-02 Set markers to same alpha value as line. - NN

2007-06-02 Fix mathtext position in svg backend. - NN

2007-06-01 Deprecate Numeric and numarray for use as numerix. Props to
           Travis -- job well done. - ADS

2007-05-18 Added LaTeX unicode support. Enable with the
           'text.latex.unicode' rcParam. This requires the ucs and
           inputenc LaTeX packages. - ADS

2007-04-23 Fixed some problems with polar -- added general polygon
           clipping to clip the lines a nd grids to the polar axes.
           Added support for set_rmax to easily change the maximum
           radial grid.  Added support for polar legend - JDH

2007-04-16 Added Figure.autofmt_xdate to handle adjusting the bottom
           and rotating the tick labels for date plots when the ticks
           often overlap - JDH

2007-04-09 Beginnings of usetex support for pdf backend. -JKS

2007-04-07 Fixed legend/LineCollection bug. Added label support
           to collections. - EF

2007-04-06 Removed deprecated support for a float value as a gray-scale;
           now it must be a string, like '0.5'.  Added alpha kwarg to
           ColorConverter.to_rgba_list. - EF

2007-04-06 Fixed rotation of ellipses in pdf backend
           (sf bug #1690559) -JKS

2007-04-04 More matshow tweaks; documentation updates; new method
           set_bounds() for formatters and locators. - EF
